# magazine

./: .gitignore  README.md  Team-Agreement.md  pyproject.toml  requirements.md
.github/workflows/: python-tests.yml
magazine/: config.py  goal.py  long_resp.py  magazine_bot.py  movies_bot.py  stock_market_bot.py  test.ipynb  test1.csv  translate_feature.py  weather.py
tests/: test_goal.py  test_magazine_bot.py  test_movies_bot.py  test_stock_market_bot.py  test_translate.py  test_weather_date_time.py
