[tool.poetry]
name = "magazine"
version = "0.1.0"
description = ""
authors = ["moayadalhaj <moayad.alhaj21@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.9"
emoji = "^1.6.1"
arabic-reshaper = "^2.1.3"
googletrans = "4.0.0-rc1"
colorama = "^0.4.4"
jupyter = "^1.0.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.2"
sklearn = "^0.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
jupyterlab = "^3.2.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
