[tool.poetry]
name = "magazine"
version = "0.1.0"
description = ""
authors = ["moayadalhaj <moayad.alhaj21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
emoji = "^1.6.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
colorama = "^0.4.4"
pandas = "^1.3.4"
arabic-reshaper = "^2.1.3"
sklearn = "^0.0"
googletrans = "4.0.0-rc1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
coverage = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
